# jean-claude

./: .coverage  .gitignore  CHANGELOG.md  CLAUDE.md  INVESTIGATION_SUMMARY.md  MEMORY_LEAK_ANALYSIS.md  NTFY_SETUP.md  README.md  TEST_CLEANUP_TASKS.md  program.md  pyproject.toml  test-file.txt  test_dashboard_memory_fix.py  test_notes_projection_simple.py  test_project_name.py
.beads/: .gitignore  beads.db.migrated  beads.left.jsonl  beads.left.meta.json  issues.jsonl  last-touched  metadata.json
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl
.beads/dolt/: config.yaml
.claude/commands/: retrospective.mdc
.github/workflows/: ci.yml  claude-code-review.yml  integration.yml
auto/: analyze_coverage.py  coverage_seed.md  run.sh
data/: events.db
docs/: autonomous-agent-patterns.md  event-sourcing-guide.md  sdlc-agent-network-architecture.md  security-linting.md  test-failure-handling-gap.md  testing-markers.md  worktree-integration-design.md
evals/: __init__.py  run_evals.py  test_llm_judge.py
evals/evaluators/: __init__.py  beads.py  workflow.py
evals/suites/: __init__.py  test_beads_parsing.py  test_workflow_state.py
examples/: coordinator_escalation_example.py
knowledge/: README.md
knowledge/capture/: test_quality_analysis.md
knowledge/context/: CONTEXT.md  TODO.md
knowledge/decisions/: README.md  async-generator-for-sdk-prompts.md
knowledge/doc/: README.md
knowledge/patterns/: README.md  claude-sdk-mcp-integration.md  mock-patching-location.md  sdk-debugging-techniques.md
knowledge/sessions/: README.md
knowledge/testing/: README.md
specs/: beads-jean_claude-0r9.md  beads-jean_claude-2fj.md  beads-jean_claude-400.md  beads-jean_claude-50z.md  beads-jean_claude-61z.md  beads-jean_claude-7gq.md  beads-jean_claude-81h.md  beads-jean_claude-c6z.md  beads-jean_claude-di8.md  beads-jean_claude-kl4.md  beads-jean_claude-nhj.md  beads-jean_claude-y97.md
src/jean_claude/: __init__.py
tests/: conftest.py  test_agent_message_sent_schema.py  test_connection_management.py  test_dashboard.py  test_database_indexes.py  test_detectors.py  test_edit_integration.py  test_event_store_init.py  test_event_type_constants.py  test_interactive_prompt.py  test_logs_command.py  test_mailbox_ntfy.py  test_mailbox_storage.py  test_message_reader.py  test_note_event_constants.py  test_note_event_schema.py  test_schema_creation.py  test_schema_initialization.py  test_security.py  test_state.py  test_status_command.py  test_streaming.py  test_work_command.py  test_workflow_utils_edge_cases.py
tests/core/: conftest.py  test_auto_snapshot.py  test_beads.py  test_budget_limit.py  test_category_indexing.py  test_conversation_history.py  test_correlation_tracking.py  test_database_connection.py  test_database_schema.py  test_decision_notes.py  test_error_handling.py  test_evaluation.py  test_event_append.py  test_event_models.py  test_event_query.py  test_event_replay.py  test_event_store_operations.py  test_event_subscription.py  test_event_type_handlers.py  test_events.py  test_idea_notes.py  test_inbox_filtering.py  test_learning_notes.py  test_mailbox_api.py  test_mailbox_message_models.py  test_mailbox_projection_base.py  test_mailbox_projection_integration.py  test_message_acknowledgment.py  test_message_completion.py  test_message_reader.py  test_message_sent_handler.py  test_message_writer.py  test_notes.py  test_notes_api.py  test_notes_categories.py  test_notes_integration.py  test_notes_projection_base.py  test_observation_notes.py  test_outbox_filtering.py  test_output_format.py  (+10 more)
tests/dashboard/: test_notes_api.py  test_notes_ui.py
tests/orchestration/: conftest.py  test_auto_continue_notes.py  test_evaluator_agent.py  test_hooks.py  test_import_hygiene.py  test_notes_event_emission.py  test_structured_output.py  test_subagent_stop_hook.py  test_two_agent.py  test_user_prompt_submit_hook.py
(+93 files in other folders)
