[project]
name = "jean-claude"
version = "0.10.0"
description = "Jean Claude CLI - AI-powered development workflows for any codebase"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Joshua Oliphant" }
]
keywords = ["ai", "cli", "claude", "developer-tools", "automation", "workflows"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "jinja2>=3.0.0",
    "pyyaml>=6.0.0",
    "anyio>=4.0.0",
    "claude-agent-sdk>=0.1.18",
    "fastapi>=0.127.0",
    "uvicorn>=0.40.0",
    "sse-starlette>=3.0.4",
    "sqlalchemy>=2.0.0",
    "pydantic-evals>=1.41.0",
    "anthropic>=0.75.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
jc = "jean_claude.cli.main:main"

[project.urls]
Homepage = "https://github.com/joshuaoliphant/jean-claude"
Documentation = "https://github.com/joshuaoliphant/jean-claude#readme"
Repository = "https://github.com/joshuaoliphant/jean-claude"
Issues = "https://github.com/joshuaoliphant/jean-claude/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jean_claude"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Run tests in parallel with 4 workers for stable, fast execution
# Using -n auto caused hangs due to resource contention
addopts = "-n 4"

# Test markers for CI pipeline
markers = [
    "fast: Fast unit tests (< 1s per test, default)",
    "slow: Slow tests (> 1s per test)",
    "integration: Integration tests (database, external services)",
    "e2e: End-to-end tests (full system, browser automation)",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
    "psutil>=7.2.1",
    "bandit[toml]>=1.7.0",
]

[tool.bandit]
exclude_dirs = ["/tests", "/.venv", "/.pytest_cache", "/build", "/dist"]

# Legitimate pattern suppressions with security justification:
# B101: assert_used - OK in tests (tests excluded via exclude_dirs)
# B110: try_except_pass - Used for optional cleanup and non-critical operations (documented inline)
# B112: try_except_continue - Used in polling loops for error resilience (ntfy response processing)
# B310: urllib_urlopen - Used ONLY for trusted APIs with HTTPS and timeouts:
#       - ntfy.sh (user notification system with HTTPS)
#       - PyPI API (https://pypi.org with timeout=10)
# B404: import_subprocess - Required for legitimate CLI tooling:
#       - beads integration (bd commands with input validation)
#       - uv package manager (trusted system tool)
# B603: subprocess_without_shell_equals_true - shell=False explicitly set for security
# B607: start_process_with_partial_path - Using trusted system tools only:
#       - uv (Python package manager, trusted)
#       - bd (beads CLI with input validation at core/beads.py)
#       - osascript (macOS notification system)
skips = ["B404", "B603", "B607", "B110", "B112", "B310"]
